// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanel renders correctly with className 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    className="tabPanelWrapper tabPanel active animationDirectionRtl test"
    data-testid="tab-panel"
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with empty props 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel"
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with id 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel_test"
    id="test"
    role="tabpanel"
  >
    First
  </div>
</div>
`;
